# python-dts-calibration

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .git-blame-ignore-revs  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  calibration_test.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  documentation.yml  python-publish-dry-run.yml  python-publish.yml
docs/: conf.py  index.rst  installation.rst  learn_by_examples.rst  nb_examples_to_docs.py  requirements.txt  usage.rst
docs/api/: dtscalibration.DataStore.rst  dtscalibration.check_dims.rst  dtscalibration.check_timestep_allclose.rst  dtscalibration.get_netcdf_encoding.rst  dtscalibration.merge_double_ended.rst  dtscalibration.open_datastore.rst  dtscalibration.open_mf_datastore.rst  dtscalibration.plot_accuracy.rst  dtscalibration.plot_dask.rst  dtscalibration.plot_location_residuals_double_ended.rst  dtscalibration.plot_residuals_reference_sections.rst  dtscalibration.plot_residuals_reference_sections_single.rst  dtscalibration.plot_sigma_report.rst  dtscalibration.read_apsensing_files.rst  dtscalibration.read_sensornet_files.rst  dtscalibration.read_sensortran_files.rst  dtscalibration.read_silixa_files.rst  dtscalibration.shift_double_ended.rst  dtscalibration.suggest_cable_shift_double_ended.rst
docs/examples/: index.rst
docs/examples/notebooks/: 01Load_xml_measurement_files.ipynb.rst  02Common_DataStore_functions_slice_mean_max_std_resample.ipynb.rst  02Define_sections.ipynb.rst  03Calculate_variance_Stokes.ipynb.rst  03Define_sections.ipynb.rst  04Calculate_variance_Stokes.ipynb.rst  04Calibrate_double_ols.ipynb.rst  04Calibrate_single_ols.ipynb.rst  05Calibrate_double_wls.ipynb.rst  05Calibrate_single_ols.ipynb.rst  05Calibrate_single_wls.ipynb.rst  06Calibrate_double_ols.ipynb.rst  07Calibrate_double_wls.ipynb.rst  07Calibrate_single_wls.ipynb.rst  08Calibrate_double_wls.ipynb.rst  09Advanced_calibration_multiple_calibration_campaigns_one_gamma.ipynb.rst  09Import_timeseries.ipynb.rst  10Align_double_ended_measurements.ipynb.rst  11Merge_single_measurements_into_double.ipynb.rst  12Datastore_from_numpy_arrays.ipynb.rst  13Fixed_parameter_calibration.ipynb.rst  14Lossy_splices.ipynb.rst  15Matching_sections.ipynb.rst  16Averaging_temperatures.ipynb.rst  A2Load_sensornet_files.ipynb.rst  A3Load_ap_sensing_files.ipynb.rst  A4Load_sensortran_files.ipynb.rst  Load_xml_measurement_files.ipynb.rst
docs/notebooks/: 01Load_xml_measurement_files.ipynb  02Common_DataStore_functions_slice_mean_max_std_resample.ipynb  03Define_sections.ipynb  04Calculate_variance_Stokes.ipynb  05Calibrate_single_ols.ipynb  06Calibrate_double_ols.ipynb  07Calibrate_single_ended.ipynb  07Calibrate_single_wls.ipynb  08Calibrate_double_ended.ipynb  08Calibrate_double_wls.ipynb  09Import_timeseries.ipynb  10Align_double_ended_measurements.ipynb  11Merge_single_measurements_into_double.ipynb  12Datastore_from_numpy_arrays.ipynb  13Fixed_parameter_calibration.ipynb  14Lossy_splices.ipynb  15Matching_sections.ipynb  16Averaging_temperatures.ipynb  17Temperature_uncertainty_single_ended.ipynb  A2Load_sensornet_files.ipynb  A3Load_ap_sensing_files.ipynb  A4Load_sensortran_files.ipynb
docs/reference/: dtscalibration.rst  index.rst
examples/: README.md
examples/notebooks/: 01Load_xml_measurement_files.ipynb  02Common_DataStore_functions_slice_mean_max_std_resample.ipynb  02Define_sections.ipynb  03Calculate_variance_Stokes.ipynb  03Define_sections.ipynb  04Calculate_variance_Stokes.ipynb  04Calibrate_double_ols.ipynb  04Calibrate_single_ols.ipynb  05Calibrate_double_wls.ipynb  05Calibrate_single_ols.ipynb  05Calibrate_single_wls.ipynb  06Calibrate_double_ols.ipynb  07Calibrate_double_wls.ipynb  07Calibrate_single_ended.ipynb  07Calibrate_single_wls.ipynb  08Calibrate_double_ended.ipynb  08Calibrate_double_wls.ipynb  09Advanced_calibration_multiple_calibration_campaigns_one_gamma.ipynb  09Import_timeseries.ipynb  10Align_double_ended_measurements.ipynb  11Merge_single_measurements_into_double.ipynb  12Datastore_from_numpy_arrays.ipynb  13Fixed_parameter_calibration.ipynb  14Lossy_splices.ipynb  15Matching_sections.ipynb  16Averaging_temperatures.ipynb  17Temperature_uncertainty_single_ended.ipynb  A2Load_sensornet_files.ipynb  A3Load_ap_sensing_files.ipynb  A4Load_sensortran_files.ipynb  Load_xml_measurement_files.ipynb  index.ipynb  jupyterhub.sqlite  jupyterhub_cookie_secret
src/dtscalibration/: __init__.py  __main__.py  averaging_utils.py  calibrate.py  calibrate_utils.py  cli.py  datastore.py  datastore_accessor.py  datastore_utils.py  dts_accessor.py  dts_accessor_utils.py  io.py  io_utils.py  plot.py  variance_helpers.py  variance_stokes.py
src/dtscalibration/calibration/: section_utils.py
src/dtscalibration/io/: apsensing.py  datastore.py  sensornet.py  sensortran.py  silixa.py  utils.py
tests/: conftest.py  test_averaging.py  test_b_suite.py  test_datastore.py  test_dtscalibration.py  test_examples.py  test_variance_stokes.py
tests/data/: channel 1_20170921112245510.xml
tests/data/ap_sensing/: _AP Sensing_N4386B_3_20180118201727.xml  _AP Sensing_N4386B_3_20180118202957.xml  _AP Sensing_N4386B_3_20180118205357.xml
tests/data/ap_sensing_2/: Readme.md  Seq_SE_DE_spac_res_0_5_m.seq  readme_data_explanation.txt
tests/data/docs_notebooks/: 01Not_working.ipynb
tests/data/double_ended/: channel 1_20170921112746818.xml  channel 1_20170921113248085.xml
tests/data/double_ended2/: channel 1_20180328014052498.xml  channel 1_20180328014057119.xml  channel 1_20180328014101652.xml  channel 1_20180328014106243.xml  channel 1_20180328014110917.xml  channel 1_20180328014115480.xml  info.txt
tests/data/external_temperature_timeseries/: Loodswaternet2018-03-28 00h.csv  Loodswaternet2018-03-28 01h.csv  Loodswaternet2018-03-28 02h.csv
tests/data/sensornet_halo_v1.0/: channel 1 20030111 002 00001.ddf  (+4 more)
(+60 files in other folders)
