[options]
python_requires = >= 3.6

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*
ignore = W605

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = dtscalibration
default_section = THIRDPARTY
forced_separate = test_dtscalibration
not_skip = __init__.py
skip = migrations
