[options]
python_requires = >= 3.8

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*
ignore = W503,W504,W605,N806,N803

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = dtscalibration
default_section = THIRDPARTY
forced_separate = test_dtscalibration
skip = migrations
